feat(cache): ApiInfo 조회에 Redis 캐시 적용
- ApiInfoStorageAdapter를 메모리 캐시에서 Redis 캐시로 변경
- RedisStoragePort에 delete 메서드 추가
- FakeRedisStoragePort에서 JSON 직렬화/역직렬화 지원

## 변경 사항

### RedisStoragePort & Adapter
- delete(String key) 메서드 추가
- Redis 키 삭제 기능 구현

### ApiInfoStorageAdapter
- 메모리 기반 캐시(List<ApiInfo> apiInfoCache) 제거
- Redis 캐시 사용으로 변경 (키: "api:info:all")
- 캐시 미스 시 DB 조회 후 Redis에 저장
- 캐시 히트/미스 로깅 추가

### 테스트
- FakeRedisStoragePort: JSON 파싱 로직 추가 및 delete 메서드 구현
- RedisStorageAdapterTest: delete 메서드 테스트 케이스 추가

## 기대 효과
- 분산 환경에서 여러 인스턴스 간 캐시 공유
- 서버 재시작 시에도 캐시 유지
- 캐시 무효화 관리 용이